--- a/CSS/all.css
+++ b/CSS/all.css
@@ -11087,13 +11087,35 @@ img {
 .recommend .card {
   background: rgba(255, 255, 255, 0.0784313725);
   padding: 40px;
-  width: 416px;
-  height: 400px;
+  height: auto;
 }
 
 .comment {
   margin: 20px 0px;
-  height: 215px;
+  flex-grow: 1;
+}
+
+/* Swiper */
+.swiper {
+  padding-bottom: 36px;
+}
+
+.swiper-pagination.swiper-pagination-bullets {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 0px;
+}
+
+.swiper-pagination-bullet {
+  background-color: #525252;
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
 }
 
 /* Tool */
@@ -11188,6 +11210,9 @@ img {
   }
 }
 @media (max-width: 376px) {
+  .recommend .card {
+    padding: 20px;
+  }
   .social {
     margin-bottom: 36px;
   }
