--- a/SCSS/bootstrap/_accordion.scss
+++ b/SCSS/bootstrap/_accordion.scss
@@ -15,7 +15,7 @@
   background-color: $accordion-button-bg;
   border: 0;
   @include border-radius(0);
-  border-radius: 16px; 
+  border-radius: 16px; // Important: avoid accordion-button's background clip the container corner's border
   overflow-anchor: none;
   @include transition($accordion-transition);
 
