--- a/CSS/all.css
+++ b/CSS/all.css
@@ -11525,6 +11525,24 @@ a.dropdown-item:active {
   color: #212529;
 }
 
+.filter-list {
+  display: flex;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  overflow-x: auto;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.filter-list::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.filter-list {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 a.filter-type-active {
   background-color: #F2F2F2;
   border-radius: 16px;
@@ -11563,6 +11581,11 @@ a.filter-orderBy-active::before {
   border-color: #fff;
 }
 
+@media (max-width: 992px) {
+  .filter-list {
+    margin-top: 24px;
+  }
+}
 @media (max-width: 768px) {
   .price-item {
     width: 100%;
