--- a/SCSS/_pricing.scss
+++ b/SCSS/_pricing.scss
@@ -85,6 +85,22 @@ a.dropdown-item:active {
     color: $dark;
 }
 
+.filter-list {
+    display: flex;
+    flex-wrap: nowrap;
+    white-space: nowrap; // Remain horizontal content
+    overflow-x: auto;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.filter-list::-webkit-scrollbar {
+    display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+.filter-list {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
 // filter-type
 a.filter-type-active {
     background-color: $black-20;
@@ -123,12 +139,15 @@ a.filter-orderBy-active::before {
 
 
 @media(max-width: 992px){
-   
+    .filter-list {
+        margin-top: 24px;
+    }
 }
 @media(max-width: 768px){
     .price-item {
         width: 100%;
     }
+
 }
 
 @media(max-width: 376px){
