--- a/CSS/all.css
+++ b/CSS/all.css
@@ -11197,6 +11197,7 @@ a:link, a:visited {
 *::before,
 ::after {
   box-sizing: border-box;
+  outline: 1px solid #343a40;
 }
 
 body {
@@ -11237,6 +11238,11 @@ img {
 }
 .service-item span {
   font-size: 80px;
+}
+
+/* Banner-animation */
+.grass-icon {
+  height: 180px;
 }
 
 /* Enterprise */
@@ -11369,6 +11375,102 @@ img {
   align-items: center;
 }
 
+/* Tool-list: Search */
+.search > *:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.dropdown > *:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.search {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+.search .form-control {
+  border: 0;
+  background-color: #F2F2F2;
+  color: #212529;
+}
+.search input {
+  padding: 20px 40px 20px 76px;
+}
+.search .material-icons {
+  position: absolute;
+  left: 42px;
+  top: calc(50% - 0.5em);
+}
+
+.btn-search-bar {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  color: #212529;
+  border: 1px solid #F2F2F2;
+  border-radius: 16px;
+  padding: 20px 32px;
+}
+.btn-search-bar:hover, .btn-search-bar:focus {
+  background-color: #fff;
+  color: #212529;
+  border-color: #212529;
+}
+
+a.dropdown-item {
+  color: #212529;
+  padding: 8px 16px;
+}
+
+a.dropdown-item:active {
+  background-color: #fff;
+  color: #212529;
+}
+
+.filter-list {
+  display: flex;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  overflow-x: auto;
+}
+
+.filter-list::-webkit-scrollbar {
+  display: none;
+}
+
+.filter-list {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+a.filter-type-active {
+  background-color: #F2F2F2;
+  border-radius: 16px;
+  color: black;
+  font-weight: 900;
+}
+
+a.filter-active::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-image: url(../img/icons/check.png);
+  position: absolute;
+  left: 120px;
+}
+
+a.filter-orderBy-active::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-image: url(../img/icons/check.png);
+  position: absolute;
+  left: 120px;
+}
+
 .page-link {
   width: 48px;
   height: 48px;
@@ -11399,6 +11501,12 @@ img {
 @media (max-width: 768px) {
   .container {
     padding: 30px;
+  }
+  .banner-animation {
+    overflow: hidden;
+  }
+  .banner-animation .grass-icon {
+    height: 117px;
   }
   .header ul {
     flex-direction: column;
@@ -11467,105 +11575,6 @@ img {
 .mark-disc {
   position: relative;
   left: 16px;
-}
-
-/* Tool-list: Search */
-.search > *:focus {
-  outline: none;
-  box-shadow: none;
-}
-
-.dropdown > *:focus {
-  outline: none;
-  box-shadow: none;
-}
-
-.search {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-}
-.search .form-control {
-  border: 0;
-  background-color: #F2F2F2;
-  color: #212529;
-}
-.search input {
-  padding: 20px 40px 20px 76px;
-}
-.search .material-icons {
-  position: absolute;
-  left: 42px;
-  top: calc(50% - 0.5em);
-}
-
-/* Tool-list: Filter */
-.btn-search-bar {
-  display: flex;
-  align-items: center;
-  background-color: #fff;
-  color: #212529;
-  border: 1px solid #F2F2F2;
-  border-radius: 16px;
-  padding: 20px 32px;
-}
-.btn-search-bar:hover, .btn-search-bar:focus {
-  background-color: #fff;
-  color: #212529;
-  border-color: #212529;
-}
-
-a.dropdown-item {
-  color: #212529;
-  padding: 8px 16px;
-}
-
-a.dropdown-item:active {
-  background-color: #fff;
-  color: #212529;
-}
-
-.filter-list {
-  display: flex;
-  flex-wrap: nowrap;
-  white-space: nowrap;
-  overflow-x: auto;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.filter-list::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.filter-list {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
-a.filter-type-active {
-  background-color: #F2F2F2;
-  border-radius: 16px;
-  color: black;
-  font-weight: 900;
-}
-
-a.filter-active::before {
-  content: "";
-  width: 16px;
-  height: 16px;
-  background-image: url(../img/icons/check.png);
-  position: absolute;
-  left: 120px;
-}
-
-a.filter-orderBy-active::before {
-  content: "";
-  width: 16px;
-  height: 16px;
-  background-image: url(../img/icons/check.png);
-  position: absolute;
-  left: 120px;
 }
 
 /* FQA */
